# worldcup-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/: README.md  install-web.sh  install.sh  wc-api.service  wc-backup.service  wc-backup.timer  wc-odds.service  wc-odds.timer  wc-tick.service  wc-tick.timer  wc-web.service
scripts/: backup_db.py  dry_run.py  dry_run_multi.py  dry_run_simultaneous.py  test_openrouter.py  verify_bracket.py  verify_hybrid_risk_engine.py  verify_market_reconciliation.py  verify_memory.py  verify_orchestrate.py  verify_results.py  verify_scoring.py  verify_settlement.py
src/worldcup_agents/: __init__.py  bracket.py  config.py  db.py  experiment.py  ingest.py  intelligence.py  leaderboard.py  llm.py  memory.py  models.py  orchestrate.py  outlook.py  predict.py  results.py  settlement.py
tasks/: DESIGN.md  TOURNAMENT_START_CREDITS.md  lessons.md  todo-bracket.md  todo-brier-board.md  todo-deploy.md  todo-experiment-provenance.md  todo-hybrid-risk-engine.md  todo-intelligence.md  todo-knockout-advance.md  todo-market-update.md  todo-orchestrator.md  todo-pipeline-fixes.md  todo-prediction-score.md  todo-prediction.md  todo-report-features.md  todo-report-hardening.md  todo-result-ingestion.md  todo-scoring.md  todo-settlement.md  todo-website.md  todo.md
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/components/: AgentMini.tsx  BankrollBar.tsx  BankrollRace.tsx  Briefing.tsx  ChallengerConsole.tsx  (+26 more)
(+24 files in other folders)
