[project]
name = "worldcup-agents"
version = "0.1.0"
description = "A competition where LLMs act as virtual gamblers predicting World Cup 2026 matches."
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai",
    "pydantic-settings",
    "httpx",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup_agents"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.16",
]
